@@ -5,8 +5,9 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <properties>
-        <maven.compiler.source>17</maven.compiler.source>
-        <maven.compiler.target>17</maven.compiler.target>
+        <java.version>19</java.version>
+        <maven.compiler.source>${java.version}</maven.compiler.source>
+        <maven.compiler.target>${java.version}</maven.compiler.target>
         <lombok.version>1.18.24</lombok.version>
         <postgre.sql.version>42.5.0</postgre.sql.version>
         <org.mapstruct.version>1.5.2.Final</org.mapstruct.version>
@@ -115,8 +116,11 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.10.1</version>
                 <configuration>
-                    <source>18</source>
-                    <target>18</target>
+                    <compilerArgs>
+                        --enable-preview
+                    </compilerArgs>
+                    <source>${java.version}</source>
+                    <target>${java.version}</target>
                     <verbose>true</verbose>
                     <annotationProcessorPaths>
                         <path>
@@ -142,6 +146,9 @@
                     <execution>
                         <id>jlink-image</id>
                         <configuration>
+                            <defaultJvmOptions>
+                                --enable-preview
+                            </defaultJvmOptions>
                             <addClassDataSharingArchive>false</addClassDataSharingArchive>
                         </configuration>
                     </execution>
